# moonwave

./: .gitignore  Cargo.toml
crates/moonwave_common/: Cargo.toml
crates/moonwave_common/src/: atomics.rs  color.rs  lib.rs
crates/moonwave_core/: Cargo.toml
crates/moonwave_core/arch/: ecs_case_study.rs
crates/moonwave_core/macros/: Cargo.toml
crates/moonwave_core/macros/src/: lib.rs
crates/moonwave_core/macros/tests/: basic.rs
crates/moonwave_core/src/: application.rs  base.rs  ecs.rs  execution.rs  extension.rs  glyph.rs  lib.rs  logger.rs  memory.rs  resources.rs  service.rs
crates/moonwave_core/src/nodes/: mod.rs  passthrough.frag  passthrough.vert
crates/moonwave_dylib/: Cargo.toml
crates/moonwave_dylib/src/: lib.rs
crates/moonwave_render/: Cargo.toml
crates/moonwave_render/src/: command.rs  graph.rs  lib.rs
crates/moonwave_resources/: Cargo.toml
crates/moonwave_resources/src/: lib.rs
crates/moonwave_scene/: Cargo.toml
crates/moonwave_scene/src/: aabb.rs  camera.rs  helper.frag  imd.rs  lib.rs  light.rs  material.rs  mesh.rs  pbr.rs  position.rs  staged_buffer.rs  texture.rs  texture_array.rs  time.rs  transform.rs  uniform.rs
crates/moonwave_scene/src/memory/: mod.rs  shared_area_buffer.rs  shared_simple_buffer.rs
crates/moonwave_scene/src/opt/: mod.rs  static_mesh_combiner.rs
crates/moonwave_shader/: Cargo.toml
crates/moonwave_shader/macros/: Cargo.toml
crates/moonwave_shader/macros/src/: lib.rs
crates/moonwave_shader/src/: base.rs  graph.rs  lib.rs  test.rs
crates/moonwave_shader/src/snapshots/: moonwave_shader__test__color_fs.snap  moonwave_shader__test__color_vs.snap  moonwave_shader__test__full_fs.snap  moonwave_shader__test__full_vs.snap  moonwave_shader__test__normal_fs.snap  moonwave_shader__test__normal_vs.snap  moonwave_shader__test__simple.snap  moonwave_shader__test__ub_full.snap
crates/moonwave_ui/: Cargo.toml
crates/moonwave_ui/arch/: example.rs
crates/moonwave_ui/macros/: Cargo.toml
crates/moonwave_ui/macros/src/: analyze.rs  core.rs  lib.rs  render.rs  render_parse.rs
crates/moonwave_ui/macros/tests/: basic.rs  test.rs
crates/moonwave_ui/src/: layout.rs  layout_extension.rs  lib.rs  render.rs  stacks.rs  view.rs
crates/moonwave_util/: Cargo.toml
crates/moonwave_util/src/: lib.rs
src/: lib.rs
