[package]
name = "moonwave"
version = "0.1.0"
edition = "2018"

[dependencies]
moonwave_common = { path = "./crates/moonwave_common" }
moonwave_core = { path = "./crates/moonwave_core" }
moonwave_shader = { path = "./crates/moonwave_shader" }
moonwave_render = { path = "./crates/moonwave_render" }
moonwave_scene = { path = "./crates/moonwave_scene" }
moonwave_resources = { path = "./crates/moonwave_resources" }
moonwave_ui = { path = "./crates/moonwave_ui" }

[workspace]
members = [
  "crates/moonwave_common",
  "crates/moonwave_scene",
  "crates/moonwave_core",
  "crates/moonwave_core/macros",
  "crates/moonwave_shader",
  "crates/moonwave_shader/macros",
  "crates/moonwave_resources",
  "crates/moonwave_render",
  "crates/moonwave_util",
  "crates/moonwave_ui",
  "crates/moonwave_ui/macros",
  "crates/thirdparty/crevice",
  "crates/thirdparty/crevice-derive",
]