[package]
name = "moonwave_core"
version = "0.1.0"
authors = ["Rene Eichhorn <rene.eichhorn1@gmail.com>"]
edition = "2018"

[dependencies]
log = { version = "0.4", features = ["std"] }
lazy_static = "1.4"
optick = "1.3"
flume = "0.10"
bitflags = "1.2"
shaderc = "0.7"
thiserror = "1.0"
bytemuck = "1.5"
async-task = "4.0"
wgpu = "0.7"
futures = "0.3"
winit = "0.24"
chrono = "0.4"
slotmap = "1.0"
core_affinity = "0.5"
hecs = "0.3"
