[package]
name = "moonwave_core"
version = "0.1.0"
authors = ["Rene Eichhorn <rene.eichhorn1@gmail.com>"]
edition = "2018"

[dependencies]
log = { version = "0.4", features = ["std"] }
lazy_static = "1.4"
optick = "1.3"
flume = "0.10"
shaderc = "0.7"
thiserror = "1.0"
async-executor = "1.4.0"
wgpu = "0.7"
futures = "0.3"
winit = "0.24"
chrono = "0.4"
core_affinity = "0.5"
itertools = "0.10"
moonwave_resources = { path = "../moonwave_resources" }
moonwave_render = { path = "../moonwave_render" }
moonwave_common = { path = "../moonwave_common" }
moonwave_core_macro = { path = "./macros" }
async-std = "1.9"
legion = "0.4"
rayon = "1.5"
parking_lot = { version = "0.11", features = ["deadlock_detection"] }
send_wrapper = "0.5"
generational-arena = "0.2"
owning_ref = "0.4.1"
async-trait = "0.1"
once_cell = "1.5"
backtrace = "0.3"
wgpu-mipmap = { path = "../thirdparty/wgpu-mipmap" }