[package]
name = "moonwave_render"
version = "0.1.0"
authors = ["Rene Eichhorn <rene.eichhorn1@gmail.com>"]
edition = "2018"

[dependencies]
wgpu = "0.7"
crossbeam = "0.8"
moonwave_common = { path = "../moonwave_common" }
moonwave_resources = { path = "../moonwave_resources" }
moonwave_shader = { path = "../moonwave_shader" }
generational-arena = "0.2"
rayon = "1.5"
parking_lot = "0.11"
log = { version = "0.4", features = ["std"] }
futures = "0.3"
thiserror = "1.0"
multimap = "0.8"
optick = "1.3"
