[package]
name = "moonwave_shader"
version = "0.1.0"
authors = ["Rene Eichhorn <rene.eichhorn1@gmail.com>"]
edition = "2018"

[dependencies]
moonwave_shader_macro = { path = "./macros" }
moonwave_resources = { path = "../moonwave_resources" }
moonwave_common = { path = "../moonwave_common" }
moonwave_core = { path = "../moonwave_core" }
uuid = { version = "0.8", features = ["v4"] }
generational-arena = "0.2"
thiserror = "1.0"
textwrap = "0.13"
optick = "1.3"
crevice = { path = "../thirdparty/crevice" }

[dev-dependencies]
insta = "1.5"