[package]
name = "moonwave_ui"
version = "0.1.0"
authors = ["Rene Eichhorn <rene.eichhorn1@gmail.com>"]
edition = "2018"

[dependencies]
generational-arena = "0.2"
moonwave_core = { path = "../moonwave_core" }
moonwave_shader = { path = "../moonwave_shader" }
moonwave_scene = { path = "../moonwave_scene" }
moonwave_resources = { path = "../moonwave_resources" }
moonwave_render = { path = "../moonwave_render" }
moonwave_common = { path = "../moonwave_common" }
moonwave_ui_macros = { path = "./macros" }
parking_lot = "0.11"
lazy_static = "1.4"
lyon = "0.17"
send_wrapper = "0.5"