[package]
name = "moonwave_shader_macro"
version = "0.1.0"
authors = ["Rene Eichhorn <rene.eichhorn1@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
quote = "1.0"
heck = "0.3"