[package]
name = "moonwave_ui_macro"
version = "0.1.0"
authors = ["Rene Eichhorn <rene.eichhorn1@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
heck = "0.3"
moonwave_util = { path = "../moonwave_util" }

[dev-dependencies]
moonwave_ui = { path = "../moonwave_ui" }
